[TASK]    Add `#[AsAllowedCallable]` attribute to plugin classes
[TASK]    Replace `$GLOBALS['TSFE']` usage with `request->getAttribute` calls
[TASK]    Remove deprecated `includeLLFile` call in BackendModuleController
[TASK]    Update Page TSconfig for ke_search table restrictions, deny index and filter option records

Version 6.6.0, 6 November 2025
[!!!]     This version changes the database structure.
[FEATURE] Allow File Collections to be indexed. Thanks to Mike Street. https://github.com/tpwd/ke_search/pull/301
[FEATURE] Make inline script CSP-compatible. Tanks to Marco Ziesing. https://github.com/tpwd/ke_search/pull/305
[BUGFIX]  Fix undefined array key PHP warning in page indexer. Thanks to Moritz Ngo. https://github.com/tpwd/ke_search/pull/304
[BUGFIX]  Fix possible error on processing missing file. Thanks to Florian Schuhmann. https://github.com/tpwd/ke_search/pull/312
[TASK]    Refine in-word search logic with SphinxSearch condition
[TASK]    Replace ternary operators with null coalescing in SearchHelper. Thanks to medarob. https://github.com/tpwd/ke_search/issues/307
[TASK]    Remove unused ContentObjectRenderer instance in Searchresult
[TASK]    Remove nl2br usage for abstract in Searchresult content rendering. Thanks to Philipp Parzer. https://github.com/tpwd/ke_search/issues/308
[TASK]    Respect manual ordering of filter options. Thanks to Jens Bodenröder. https://github.com/tpwd/ke_search/issues/309
[BUFIX]   Respect empty shortcut record. Thanks to p2media. https://github.com/tpwd/ke_search/issues/313

Version 6.5.0, 6 August 2025
[FEATURE] Add hook to check if header field should be indexed and move the the check into a dedicated method. Thanks to Joost. https://github.com/tpwd/ke_search/pull/297
[BUGFIX]  Fix potential null return in preg_replace usage
[BUGFIX]  Fix wrong highlighting of HTML tags. Thanks to CodeKapitän. https://github.com/tpwd/ke_search/issues/298